FIX: Use object-fit: cover to make images fit perfectly in container without distortion in my .recipe_container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -588,7 +588,8 @@ header {
         transform: translateX(-50%);
 
         height: 100%;
-        width: auto;
+        width: 100%;
+        object-fit: cover;
 
         transition: all 0.4s;
       }
